Add adaptive RPCA rank function and integrate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ndx_estimate_initial_hrfs)
 export(ndx_extract_task_betas)
 export(ndx_initial_glm)
 export(ndx_rpca_temporal_components_multirun)
+export(Auto_Adapt_RPCA_Rank)
 export(ndx_solve_ridge)
 export(ndx_spectral_sines)
 import(Rcpp)
