Add BIC-based spectral regressor selection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ndx_initial_glm)
 export(ndx_rpca_temporal_components_multirun)
 export(ndx_solve_ridge)
 export(ndx_spectral_sines)
+export(Select_Significant_Spectral_Regressors)
 import(Rcpp)
 import(fmrireg)
 import(glmgen)
