--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(ndx_estimate_initial_hrfs)
 export(ndx_extract_task_betas)
 export(ndx_initial_glm)
 export(ndx_rpca_temporal_components_multirun)
-export(ndx_solve_ridge)
+export(ndx_solve_anisotropic_ridge)
 export(ndx_spectral_sines)
 import(Rcpp)
 import(fmrireg)
