--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,5 +38,8 @@ importFrom(pracma,findpeaks)
 importFrom(rpca,rpca)
 importFrom(stats,convolve)
 importFrom(stats,lm.fit)
+importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,quantile)
 importFrom(stats,var)
 importFrom(tibble,is_tibble)
