Add diagnostic HTML report generation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(ndx_initial_glm)
 export(ndx_rpca_temporal_components_multirun)
 export(ndx_solve_anisotropic_ridge)
 export(ndx_spectral_sines)
+export(ndx_generate_html_report)
 import(Rcpp)
 import(fmrireg)
 import(glmgen)
