Add JSON certificate generation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     utils,
     matrixStats,
     tibble,
-    pracma
+    pracma,
+    jsonlite
 Suggests:
     testthat (>= 3.0.0)
 RoxygenNote: 7.3.2.9000
