--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(ndx_rpca_temporal_components_multirun)
 export(ndx_solve_anisotropic_ridge)
 export(ndx_spectral_sines)
 export(ndx_generate_html_report)
+export(ndx_generate_json_certificate)
 import(Rcpp)
 import(fmrireg)
 import(glmgen)
@@ -44,3 +45,4 @@ importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,var)
 importFrom(tibble,is_tibble)
+importFrom(jsonlite,write_json)
