--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(ndx_extract_task_betas)
 export(ndx_initial_glm)
 export(ndx_rpca_temporal_components_multirun)
 export(ndx_solve_anisotropic_ridge)
+export(ndx_compute_projection_matrices)
+export(ndx_gcv_tune_lambda_parallel)
+export(ndx_update_lambda_aggressiveness)
 export(ndx_spectral_sines)
 export(ndx_generate_html_report)
 export(ndx_generate_json_certificate)
