--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(calculate_DES)
 export(calculate_R2_voxelwise)
 export(calculate_residuals_ols)
 export(ndx_ar2_whitening)
+export(ndx_precision_weights_from_S)
 export(ndx_build_design_matrix)
 export(ndx_estimate_initial_hrfs)
 export(ndx_extract_task_betas)
