Implement GCV-based anisotropic ridge

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(ndx_extract_task_betas)
 export(ndx_initial_glm)
 export(ndx_rpca_temporal_components_multirun)
 export(ndx_solve_anisotropic_ridge)
+export(ndx_estimate_res_var_whitened)
 export(ndx_compute_projection_matrices)
 export(ndx_gcv_tune_lambda_parallel)
 export(ndx_update_lambda_aggressiveness)
