Add diagnostics metrics and JSON certificate fields

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     matrixStats,
     tibble,
     pracma,
-    jsonlite
+    jsonlite,
+    digest
 Suggests:
     testthat (>= 3.0.0)
 RoxygenNote: 7.3.2.9000
