Add beta stability and Ljung-Box diagnostics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(Select_Significant_Spectral_Regressors)
 export(calculate_DES)
 export(calculate_R2_voxelwise)
 export(calculate_residuals_ols)
+export(calculate_beta_stability)
+export(compute_ljung_box_pvalues)
 export(ndx_ar2_whitening)
 export(ndx_precision_weights_from_S)
 export(ndx_build_design_matrix)
