Rename whitening function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(Select_Significant_Spectral_Regressors)
 export(calculate_DES)
 export(calculate_R2_voxelwise)
 export(calculate_residuals_ols)
-export(ndx_ar2_whitening)
+export(ndx_ar_whitening)
 export(ndx_precision_weights_from_S)
 export(ndx_build_design_matrix)
 export(ndx_estimate_initial_hrfs)
