--- a/..Rcheck/ndx/NAMESPACE
+++ b/..Rcheck/ndx/NAMESPACE
@@ -4,7 +4,7 @@ export(NDX_Process_Subject)
 export(calculate_DES)
 export(calculate_R2_voxelwise)
 export(calculate_residuals_ols)
-export(ndx_ar2_whitening)
+export(ndx_ar_whitening)
 export(ndx_build_design_matrix)
 export(ndx_estimate_initial_hrfs)
 export(ndx_extract_task_betas)
