Add progressive viz exports to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(ndx_update_lambda_aggressiveness)
 export(ndx_spectral_sines)
 export(ndx_generate_html_report)
 export(ndx_generate_json_certificate)
+export(ndx_generate_progressive_enhancement)
+export(ndx_add_progressive_enhancement_to_report)
 import(Rcpp)
 import(fmrireg)
 import(glmgen)
