Add visualization dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,11 @@ Imports:
     tibble,
     pracma,
     jsonlite,
-    digest
+    digest,
+    plotly,
+    htmltools,
+    htmlwidgets,
+    magrittr
 Suggests:
     testthat (>= 3.0.0)
 RoxygenNote: 7.3.2.9000
