Vectorize tSNR calculation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,6 @@ Imports:
     jsonlite,
     digest
 Suggests:
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    microbenchmark
 RoxygenNote: 7.3.2.9000
