Add visualization dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,10 @@ Imports:
     tibble,
     pracma,
     jsonlite,
-    digest
+    digest,
+    htmlwidgets,
+    htmltools,
+    plotly
 Suggests:
     testthat (>= 3.0.0)
 RoxygenNote: 7.3.2.9000
