--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,3 +53,11 @@ importFrom(stats,quantile)
 importFrom(stats,var)
 importFrom(tibble,is_tibble)
 importFrom(jsonlite,write_json)
+importFrom(htmlwidgets,saveWidget)
+importFrom(htmltools,tags)
+importFrom(htmltools,tagList)
+importFrom(htmltools,div)
+importFrom(htmltools,HTML)
+importFrom(plotly,plot_ly)
+importFrom(plotly,add_trace)
+importFrom(plotly,layout)
