--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Auto_Adapt_RPCA_Rank)
 export(NDX_Process_Subject)
 export(ndx_default_user_options)
+export(ndx_val_or_na)
 export(merge_lists)
 export(`%||%`)
 export(Select_Significant_Spectral_Regressors)
