--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,34 +2,34 @@
 
 export(Auto_Adapt_RPCA_Rank)
 export(NDX_Process_Subject)
-export(ndx_validate_process_subject_inputs)
-export(ndx_prepare_workflow_options)
-export(ndx_run_annihilation_setup)
-export(ndx_default_user_options)
-export(ndx_val_or_na)
-export(merge_lists)
-export(`%||%`)
 export(Select_Significant_Spectral_Regressors)
+export(`%||%`)
 export(calculate_DES)
 export(calculate_R2_voxelwise)
 export(calculate_residuals_ols)
+export(merge_lists)
+export(ndx_add_progressive_enhancement_to_report)
 export(ndx_ar2_whitening)
-export(ndx_precision_weights_from_S)
 export(ndx_build_design_matrix)
-export(ndx_estimate_initial_hrfs)
-export(ndx_extract_task_betas)
-export(ndx_initial_glm)
-export(ndx_rpca_temporal_components_multirun)
-export(ndx_solve_anisotropic_ridge)
-export(ndx_estimate_res_var_whitened)
 export(ndx_compute_projection_matrices)
+export(ndx_default_user_options)
+export(ndx_estimate_initial_hrfs)
+export(ndx_estimate_res_var_whitened)
+export(ndx_extract_task_betas)
 export(ndx_gcv_tune_lambda_parallel)
-export(ndx_update_lambda_aggressiveness)
-export(ndx_spectral_sines)
 export(ndx_generate_html_report)
 export(ndx_generate_json_certificate)
 export(ndx_generate_progressive_enhancement)
-export(ndx_add_progressive_enhancement_to_report)
+export(ndx_initial_glm)
+export(ndx_precision_weights_from_S)
+export(ndx_prepare_workflow_options)
+export(ndx_rpca_temporal_components_multirun)
+export(ndx_run_annihilation_setup)
+export(ndx_solve_anisotropic_ridge)
+export(ndx_spectral_sines)
+export(ndx_update_lambda_aggressiveness)
+export(ndx_val_or_na)
+export(ndx_validate_process_subject_inputs)
 import(Rcpp)
 import(fmrireg)
 import(glmgen)
@@ -43,14 +43,29 @@ import(tibble)
 importFrom(fmrireg,baseline_model)
 importFrom(fmrireg,design_matrix)
 importFrom(fmrireg,event_model)
+importFrom(fmrireg,hrf_spmg1)
 importFrom(fmrireg,sampling_frame)
 importFrom(genlasso,fusedlasso)
+importFrom(htmltools,HTML)
+importFrom(htmltools,div)
+importFrom(htmltools,tagList)
+importFrom(htmltools,tags)
+importFrom(htmlwidgets,saveWidget)
+importFrom(magrittr,"%>%")
+importFrom(matrixStats,colMads)
+importFrom(matrixStats,colMeans2)
+importFrom(matrixStats,colMedians)
+importFrom(matrixStats,colSds)
 importFrom(matrixStats,colVars)
 importFrom(multitaper,spec.mtm)
 importFrom(oro.nifti,origin)
 importFrom(oro.nifti,reorient)
 importFrom(oro.nifti,slice)
+importFrom(plotly,add_trace)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
 importFrom(pracma,findpeaks)
+importFrom(psd,pspectrum)
 importFrom(rpca,rpca)
 importFrom(stats,convolve)
 importFrom(stats,lm.fit)
@@ -59,17 +74,3 @@ importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,var)
 importFrom(tibble,is_tibble)
-importFrom(jsonlite,write_json)
-importFrom(htmlwidgets,saveWidget)
-importFrom(plotly,plot_ly)
-importFrom(plotly,add_trace)
-importFrom(plotly,layout)
-importFrom(htmltools,tags)
-importFrom(htmltools,tagList)
-importFrom(htmltools,div)
-importFrom(htmltools,HTML)
-importFrom(plotly,plot_ly)
-importFrom(plotly,add_trace)
-importFrom(plotly,layout)
-importFrom(htmlwidgets,saveWidget)
-importFrom(magrittr,'%>%')
