Add LOOCV ridge tuning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(ndx_estimate_initial_hrfs)
 export(ndx_estimate_res_var_whitened)
 export(ndx_extract_task_betas)
 export(ndx_gcv_tune_lambda_parallel)
+export(ndx_loocv_tune_lambda_ridge)
 export(ndx_generate_html_report)
 export(ndx_generate_json_certificate)
 export(ndx_generate_progressive_enhancement)
