--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: ndx
 Title: ND-X: Next-Generation fMRI Denoising
 Version: 0.0.0.9000
-Author: Your Name [aut, cre]
-Maintainer: Your Name <your.email@example.com>
-Authors@R: person("Your Name", email = "your.email@example.com", role = c("aut", "cre"),
-                  comment = c(ORCID = "YOUR-ORCID-ID"))
+Author: Bradley Buchsbaum [aut, cre]
+Maintainer: Bradley Buchsbaum <brad.buchsbaum@gmail.com>
+Authors@R: person(given = "Bradley", family = "Buchsbaum",
+                   email = "brad.buchsbaum@gmail.com",
+                   role = c("aut", "cre"))
 Description: Implements the ND-X fMRI denoising pipeline, designed to
     surpass existing methods by integrating advanced data-adaptive
     techniques.
